--- a/trips/New folder/index.html
+++ b/trips/New folder/index.html
@@ -18,7 +18,7 @@
           <div
             class="swiper-slide"
             style="
-              background: url('https://cdn.bootstrapstudio.io/placeholders/1400x800.png')
+              background: url('wallpaperflare.com_wallpaper (1).jpg')
                 center center / cover no-repeat;
             "
           >
@@ -83,14 +83,14 @@
           <div
             class="swiper-slide"
             style="
-              background: url('https://cdn.bootstrapstudio.io/placeholders/1400x800.png')
+              background: url('wallpaperflare.com_wallpaper.jpg')
                 center center / cover no-repeat;
             "
           ></div>
           <div
             class="swiper-slide"
             style="
-              background: url('https://cdn.bootstrapstudio.io/placeholders/1400x800.png')
+              background: url('"C:\Users\sapph\Downloads\wallpaperflare.com_wallpaper (2).jpg')
                 center center / cover no-repeat;
             "
           ></div>
