--- a/home/home.html
+++ b/home/home.html
@@ -23,11 +23,11 @@
                 <div class="nav">
                     <ul>
                         <li><a class="menu-hover" href="index.html">Home</a></li>
-                        <li><a class="menu-hover" href="index.html">Travel</a></li>
+                        <li><a class="menu-hover" href="index.html">About</a></li>
                         <li><a class="menu-hover" href="index.html">Book Now</a></li>
-                        <li><a class="menu-hover" href="index.html">Gallery</a></li>
-                        <li><a class="menu-hover" href="index.html">Holyday</a></li>
-                        <li><a class="menu-hover" href="index.html">Blog</a></li>
+                        <li><a class="menu-hover" href="index.html">Our Trips</a></li>
+                        <li><a class="menu-hover" href="index.html">Login</a></li>
+                        
                     </ul>
                 </div>
                 <div id="toggle-btn">
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="header-info-par">
                 <h1 class="typewrite" data-period="2000"
-                    data-type='["The World Is A Beautiful Place To Be Explored.","Adventure Awaits, go find it.","More Memories All Over The World."]'>
+                    data-type='["Travel brings power and love back into your life.","Travel far, travel wide, travel often.","Adventure Awaits, go find it."]'>
                 </h1>
                 <p>Traveling is a wonderful experience that allows us to explore new places, cultures, and traditions. 
                     It broadens our horizons and exposes us to different perspectives and ways of life.</p>
@@ -49,18 +49,65 @@
             </div>
             <div class="video">
                 <video id="video" autoplay loop muted>
-                    <source src="images/travel.mp4" type="video/mp4" />
+                    <source src="homevideo.mp4" type="video/mp4" />
                 </video>
             </div>
         </div>
     </header>
     <section id="welcome-text">
         <div class="container">
-            <h2>The Official Travel Site of the friendly Fiji Islands</h2>
+            <h2>The Official Travel Site of the Think travel agency</h2>
             <p>when an unknown printer took a gallery of type and scrambled it to make a type speicmen</p>
         </div>
     </section>
     <!-- Slides Section Start-->
+    <section id="slides-par">
+        <div class="container">
+            <div class="slides">
+                <img id="image1"  src="sticker2.jpg" width="200px" height="200px">
+                <div class="slide_1 slide_2">
+                    <div class="slide-info">
+                        <p>italie</p>
+                    </div>
+                </div>
+                <div class="slide_1 slide_3">
+                    <div class="slide-info">
+                        <p>Bali</p>
+                    </div>
+                </div>
+                <div class="slide_1 slide_4">
+                    <div class="slide-info">
+                        <p>Greece</p>
+                    </div>
+                </div>
+                <div class="slide_1 slide_5">
+                    <div class="slide-info">
+                        <p>Suisse</p>
+                    </div>
+                </div>
+                <div class="slide_1 slide_6">
+                    <div class="slide-info">
+                        <p>Iceland</p>
+                    </div>
+                </div>
+                <div class="slide_1 slide_7">
+                    <div class="slide-info">
+                        <p>Tunisia</p>
+                    </div>
+                </div>
+                <div class="slide_1 slide_8">
+                    <div class="slide-info">
+                        <p>Japan</p>
+                    </div>
+                </div>
+                <img id="image2"  src="sticker3.jpg" width="200px" height="200px">
+            </div>
+        </div>
+    </section>
+    <!-- Slides Section Start-->
+
+
+
     
     <script src="js/jquery-3.1.1.min.js"></script> <!--tkhali el barre tahbet-->
     <script src="js/home.js"></script>
