--- a/countries/index.html
+++ b/countries/index.html
@@ -281,7 +281,7 @@
             >
               <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon"><i class="bi bi-person"></i></div>
-                <h4 class="title"><a href="">tourist's guide</a></h4>
+                <h4 class="title"><a href="#team">tourists' guide</a></h4>
                 <p class="description">
                   we provide a fully trained crew of tourists 'guide ,that helps
                   elevate your experience
@@ -294,11 +294,157 @@
             >
               <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon"><i class="bi bi-currency-dollar"></i></div>
-                <h4 class="title"><a href="">refunds </a></h4>
-                <p class="description">
+                <h4 class="title"><a href="">Cancellation policy </a></h4>
+                <!--<p class="description">
                   insuring our customers' satisfaction,we offer refund upon
                   cancelation that is atleast 3 days prior to the set date
-                </p>
+                </p>-->
+                <ul class="list-unstyled fa-ul">
+                  <li>
+                    <app-icon-text
+                      _ngcontent-gis-c165=""
+                      _nghost-gis-c134=""
+                      ng-reflect-icon="tick"
+                      ng-reflect-text="Refundable"
+                      ><p _ngcontent-gis-c134="" class="mb-0">
+                        <svg-icon
+                          _ngcontent-gis-c134=""
+                          ng-reflect-src="assets/icons/tick.svg"
+                          ng-reflect-svg-style="[object Object]"
+                          class="ng-star-inserted"
+                          ><svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            _ngcontent-gis-c134=""
+                            aria-hidden="true"
+                            style="margin-right: 10px"
+                          >
+                            <g id="ok" _ngcontent-gis-c134="">
+                              <path
+                                id="Path"
+                                d="M4 13L9 18L20 7"
+                                stroke="#90CB83"
+                                stroke-width="1.5"
+                                stroke-linecap="round"
+                                _ngcontent-gis-c134=""
+                              ></path>
+                            </g></svg></svg-icon
+                        ><!--bindings={
+  "ng-reflect-ng-if": "tick"
+}--><!--ng-container--><!--bindings={
+  "ng-reflect-ng-if": "true"
+}--><span
+                          _ngcontent-gis-c134=""
+                          ng-reflect-ng-style="[object Object]"
+                          style="width: max-content"
+                        >
+                          Spot pending (< 40days)</span
+                        >
+                      </p></app-icon-text
+                    >
+                  </li>
+                  <li>
+                    <app-icon-text
+                      _ngcontent-gis-c165=""
+                      _nghost-gis-c134=""
+                      ng-reflect-icon="tick"
+                      ng-reflect-text="Refundable"
+                      ><p _ngcontent-gis-c134="" class="mb-0">
+                        <svg-icon
+                          _ngcontent-gis-c134=""
+                          ng-reflect-src="assets/icons/tick.svg"
+                          ng-reflect-svg-style="[object Object]"
+                          class="ng-star-inserted"
+                          ><svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            _ngcontent-gis-c134=""
+                            aria-hidden="true"
+                            style="margin-right: 10px"
+                          >
+                            <g id="ok" _ngcontent-gis-c134="">
+                              <path
+                                id="Path"
+                                d="M4 13L9 18L20 7"
+                                stroke="#90CB83"
+                                stroke-width="1.5"
+                                stroke-linecap="round"
+                                _ngcontent-gis-c134=""
+                              ></path>
+                            </g></svg></svg-icon
+                        ><!--bindings={
+  "ng-reflect-ng-if": "tick"
+}--><!--ng-container--><!--bindings={
+  "ng-reflect-ng-if": "true"
+}--><span
+                          _ngcontent-gis-c134=""
+                          ng-reflect-ng-style="[object Object]"
+                          style="width: max-content"
+                        >
+                          Spot confirmed : voucher</span
+                        >
+                      </p></app-icon-text
+                    >
+                  </li>
+                  <li>
+                    <app-icon-text
+                      _ngcontent-gis-c165=""
+                      _nghost-gis-c134=""
+                      ng-reflect-icon="close-red"
+                      ng-reflect-text="Non-refundable"
+                      ><p _ngcontent-gis-c134="" class="mb-0">
+                        <svg-icon
+                          _ngcontent-gis-c134=""
+                          ng-reflect-src="assets/icons/close-red.svg"
+                          ng-reflect-svg-style="[object Object]"
+                          class="ng-star-inserted"
+                          ><svg
+                            width="32"
+                            height="32"
+                            viewBox="0 0 32 32"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            _ngcontent-gis-c134=""
+                            aria-hidden="true"
+                            style="margin-right: 10px"
+                          >
+                            <g opacity="0.5" _ngcontent-gis-c134="">
+                              <path
+                                d="M23.5425 23.5425L8.45758 8.45753"
+                                stroke="#EF5F8E"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                                _ngcontent-gis-c134=""
+                              ></path>
+                              <path
+                                d="M23.5424 8.45753L8.45747 23.5425"
+                                stroke="#EF5F8E"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                                _ngcontent-gis-c134=""
+                              ></path>
+                            </g></svg></svg-icon
+                        ><!--bindings={
+  "ng-reflect-ng-if": "close-red"
+}--><!--ng-container--><!--bindings={
+  "ng-reflect-ng-if": "true"
+}--><span
+                          _ngcontent-gis-c134=""
+                          ng-reflect-ng-style="[object Object]"
+                          style="width: max-content"
+                        >
+                          40 days pre-trip</span
+                        >
+                      </p></app-icon-text
+                    >
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -493,7 +639,7 @@
       <section id="team" class="team">
         <div class="container">
           <div class="section-title" data-aos="fade-in" data-aos-delay="100">
-            <h2>popular destinations</h2>
+            <h2>Local Guides</h2>
           </div>
 
           <div class="row">
@@ -501,14 +647,14 @@
               <div class="member" data-aos="fade-up">
                 <div class="pic">
                   <img
-                    src="assets/img/team/team-1.jpg"
+                    src="img/Local guides/wayanS.jpg"
                     class="img-fluid"
                     alt=""
                   />
                 </div>
                 <div class="member-info">
-                  <h4>Japan</h4>
-                  <span>asia</span>
+                  <h4>Wayan S.</h4>
+                  <span>Despasar, Bali, Indonesia</span>
                 </div>
               </div>
             </div>
@@ -523,8 +669,8 @@
                   />
                 </div>
                 <div class="member-info">
-                  <h4>switzerland</h4>
-                  <span>europe</span>
+                  <h4>Kenny Ketut S.</h4>
+                  <span>Despasar, Bali, Indonesia</span>
                 </div>
               </div>
             </div>
@@ -533,14 +679,14 @@
               <div class="member" data-aos="fade-up" data-aos-delay="300">
                 <div class="pic">
                   <img
-                    src="assets/img/team/team-3.jpg"
+                    src="img/Local guides/NyomanGM.jpg"
                     class="img-fluid"
                     alt=""
                   />
                 </div>
                 <div class="member-info">
-                  <h4>tunisia</h4>
-                  <span>africa</span>
+                  <h4>Nyoman G. M.</h4>
+                  <span>Despasar, Bali, Indonesia</span>
                 </div>
               </div>
             </div>
