--- a/home/home.html
+++ b/home/home.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,500;0,600;1,300&display=swap"
-        rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,500;0,600;1,300&display=swap" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="../fragments/barre/barre.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
+
 <body>
     <div id="arrow">
         <i class="fa fa-arrow-up"></i>
@@ -36,14 +38,12 @@
             </div>
         </div>
     </nav>
-
     <header>
         <div class="container">
             <div class="header-info-par">
-                <h1 class="typewrite" data-period="2000"
-                    data-type='["Travel brings power and love back into your life.","Travel far, travel wide, travel often.","Adventure Awaits, go find it."]'>
+                <h1 class="typewrite" data-period="2000" data-type='["Travel brings power and love back into your life.","Travel far, travel wide, travel often.","Adventure Awaits, go find it."]'>
                 </h1>
-                <p>Traveling is a wonderful experience that allows us to explore new places, cultures, and traditions. 
+                <p>Traveling is a wonderful experience that allows us to explore new places, cultures, and traditions.
                     It broadens our horizons and exposes us to different perspectives and ways of life.</p>
                 <a href="#" class="a">Read More</a>
             </div>
@@ -64,7 +64,7 @@
     <section id="slides-par">
         <div class="container">
             <div class="slides">
-                <img id="image1"  src="sticker2.jpg" width="200px" height="200px">
+                <img id="image1" src="sticker2.jpg" width="200px" height="200px">
                 <div class="slide_1 slide_2">
                     <div class="slide-info">
                         <p>italie</p>
@@ -100,7 +100,7 @@
                         <p>Japan</p>
                     </div>
                 </div>
-                <img id="image2"  src="sticker3.jpg" width="200px" height="200px">
+                <img id="image2" src="sticker3.jpg" width="200px" height="200px">
             </div>
         </div>
     </section>
@@ -108,9 +108,9 @@
 
 
 
-    
-    <script src="js/jquery-3.1.1.min.js"></script> <!--tkhali el barre tahbet-->
-    <script src="js/home.js"></script>
+
+    <script src="../fragments/barre/jquery-3.1.1.min.js"></script> <!--tkhali el barre tahbet-->
+    <script src="../fragments/barre/barre.js"></script>
 </body>
 
 </html>
