removed the eyes

--- a/login/sign up.html
+++ b/login/sign up.html
@@ -74,7 +74,7 @@
                 <div class="password" >
                   <div class="hide">
                     <input type="password" placeholder="Password" id="form3Example4" class="input p" >
-                    <i class="far fa-eye  eye" id="togglePassword"></i>
+                    <!--i class="far fa-eye  eye" id="togglePassword"></i-->
                   </div>
                   <p class="rule">Password must at least 6 character. </p>
                 </div>
@@ -83,7 +83,7 @@
                 <div class="verify-password " >
                     <div class="hide">
                       <input type="password" placeholder="Confirm Password" id="form3Example4" class="input p" >
-                      <i class="far fa-eye  eye" id="togglePassword"></i>
+                      <!--i class="far fa-eye  eye" id="togglePassword"></i-->
                     </div>
                    
                   </div>
